--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "chalk": "^1.1.3",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "nunjucks": "^3.0.0"
   }
 }
