--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.16.0",
     "bootstrap": "^3.3.7",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
-    "nunjucks": "^3.0.0"
+    "lodash": "^4.17.4",
+    "nunjucks": "^3.0.0",
+    "path": "^0.12.7"
   }
 }
