--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.14.0",
     "lodash": "^4.17.4",
     "nunjucks": "^3.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^1.7.2"
   }
 }
